2012-01-13  Gregg Tavares  <gman@google.com>

        Add WebGLContextGroup as step toward sharing WebGL resources
        https://bugs.webkit.org/show_bug.cgi?id=75906

        The WebGL Working Group will soon add the ability to share
        WebGL resources among WebGL contexts. This is the necessary
        prep work. NO API changes.

        Added WebGLSharedObject for objects that are shared vs
        WebGLContextObject for objects that are not.

        Reviewed by Kenneth Russell.

        No new tests. No change in behavior.

        * GNUmakefile.list.am:
        * WebCore.gypi:
        * html/canvas/OESVertexArrayObject.cpp:
        (WebCore::OESVertexArrayObject::createVertexArrayOES):
        (WebCore::OESVertexArrayObject::deleteVertexArrayOES):
        (WebCore::OESVertexArrayObject::isVertexArrayOES):
        (WebCore::OESVertexArrayObject::bindVertexArrayOES):
        * html/canvas/WebGLBuffer.cpp:
        (WebCore::WebGLBuffer::WebGLBuffer):
        (WebCore::WebGLBuffer::~WebGLBuffer):
        (WebCore::WebGLBuffer::deleteObjectImpl):
        * html/canvas/WebGLBuffer.h:
        * html/canvas/WebGLContextGroup.cpp: Added.
        (WebCore::WebGLContextGroup::create):
        (WebCore::WebGLContextGroup::WebGLContextGroup):
        (WebCore::WebGLContextGroup::~WebGLContextGroup):
        (WebCore::WebGLContextGroup::getAGraphicsContext3D):
        (WebCore::WebGLContextGroup::addContext):
        (WebCore::WebGLContextGroup::removeContext):
        (WebCore::WebGLContextGroup::removeObject):
        (WebCore::WebGLContextGroup::addObject):
        (WebCore::WebGLContextGroup::detachAndRemoveAllObjects):
        (WebCore::WebGLContextGroup::loseContextGroup):
        * html/canvas/WebGLContextGroup.h: Copied from Source/WebCore/html/canvas/WebGLShader.h.
        * html/canvas/WebGLContextObject.cpp: Copied from Source/WebCore/html/canvas/WebGLShader.cpp.
        (WebCore::WebGLContextObject::WebGLContextObject):